added solutions to html and css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <li>food</li>
           <li>anger</li>
           <li>workaholism</li>
+          <li class="solution">meditation</li>
+          <li class="solution">taiji</li>
+          <li class="solution">nature</li>
         </ul>
       </div>
 
