--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <title>Stay Sober!</title>
+    <title>How to Stay Sober</title>
   </head>
 
   <body>
